# shownamer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
shownamer/: __init__.py  __main__.py  api.py  core.py  titleEmbed.py  utils.py
